--- a/rankings.html
+++ b/rankings.html
@@ -48,13 +48,10 @@
         }
 
         select {
-            background-color: #fff;
-            color: #000;
-            padding: 10px 20px;
-            margin-top: 10px;
+            width: 200px;
+            background-color: #6b6a6a;
+            color: #fff;
             border: 1px solid #444444;
-            cursor: pointer;
-            height: 36px;
         }
 
         table {
