--- a/test2.html
+++ b/test2.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Euro 2024 Live Scores</title>
+    <style>
+        body {
+            background-color: #2c2c2c; /* Change the background color of the page */
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+            color: white; /* Text color for better readability */
+        }
+        .widget-container {
+            background-color: #ffffff; /* Background color of the widget container */
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+        }
+        iframe {
+            border: none;
+        }
+    </style>
 </head>
 <body>
     <h1>Euro 2024 Live Scores</h1>
-    <!-- ScoreBat Live Score Widget -->
-    <iframe src="https://www.scorebat.com/embed/livescore/" frameborder="0" width="100%" height="600" allowfullscreen allow="autoplay; fullscreen" style="overflow:hidden;"></iframe>
-    <!-- End of ScoreBat Live Score Widget -->
+    <div class="widget-container">
+        <!-- ScoreBat Live Score Widget -->
+        <iframe src="https://www.scorebat.com/embed/league/euro2024/?token=MTYyODQ0XzE3MTgyMzI5MzNfODM4Yjk1MTQzMmI1OGFiMWJkZGQyYjI0MTNiZDQ4YmQ1ZTQ1YWI4Ng==" frameborder="0"; background-color: #2c2c2c; width="600" height="760" allowfullscreen allow='autoplay; fullscreen' style="width:100%;height:760px;overflow:hidden;display:block;" class="_scorebatEmbeddedPlayer_"></iframe><script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://www.scorebat.com/embed/embed.js?v=arrv'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'scorebat-jssdk'));</script>
+        <!-- End of ScoreBat Live Score Widget -->
+    </div>
 </body>
 </html>
