--- a/rankings.html
+++ b/rankings.html
@@ -78,10 +78,20 @@
             right: 10px;
             font-size: 0.8em;
             color: #484747;
-            background-color: 1e1e1e;
+            background-color: #1e1e1e;
             padding: 5px;
             border-radius: 3px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .widget-container {
+            width: 50%;
+            margin: 20px auto;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
         }
     </style>
 </head>
@@ -106,8 +116,24 @@
             <option value="Overall">Overall</option>
         </select>
     </div>
-    <div id="scoresTableContainer" class="center"></div>
-
+    <div class="container">
+        <div id="scoresTableContainer" class="center"></div>
+        <div class="widget-container">
+            <!-- ScoreBat Live Score Widget -->
+            <iframe src="https://www.scorebat.com/embed/league/euro2024/?token=MTYyODQ0XzE3MTgyMzI5MzNfODM4Yjk1MTQzMmI1OGFiMWJkZGQyYjI0MTNiZDQ4YmQ1ZTQ1YWI4Ng==" frameborder="0" background-color="#2c2c2c" width="600" height="760" allowfullscreen allow='autoplay; fullscreen' style="width:100%;height:760px;overflow:hidden;display:block;" class="_scorebatEmbeddedPlayer_"></iframe>
+            <script>
+                (function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) return;
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = 'https://www.scorebat.com/embed/embed.js?v=arrv';
+                    fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'scorebat-jssdk'));
+            </script>
+            <!-- End of ScoreBat Live Score Widget -->
+        </div>
+    </div>
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
             const startDate = new Date('2024-06-15');
