--- a/rankings.html
+++ b/rankings.html
@@ -52,12 +52,14 @@
             background-color: #6b6a6a;
             color: #fff;
             border: 1px solid #444444;
+            display: block;
+            margin: 0 auto;
         }
 
         table {
             margin: 20px auto;
             border-collapse: collapse;
-            width: 50%;
+            width: 100%;
         }
 
         table,
@@ -85,13 +87,21 @@
         }
 
         .widget-container {
-            width: 20%;
+            width: 50%;
             margin: 20px auto;
         }
 
         .container {
             display: flex;
             justify-content: center;
+        }
+
+        .left-container {
+            width: 50%;
+        }
+
+        .right-container {
+            width: 50%;
         }
     </style>
 </head>
@@ -117,21 +127,25 @@
         </select>
     </div>
     <div class="container">
-        <div id="scoresTableContainer" class="center"></div>
-        <div class="widget-container">
-            <!-- ScoreBat Live Score Widget -->
-            <iframe src="https://www.scorebat.com/embed/league/euro2024/?token=MTYyODQ0XzE3MTgyMzI5MzNfODM4Yjk1MTQzMmI1OGFiMWJkZGQyYjI0MTNiZDQ4YmQ1ZTQ1YWI4Ng==" frameborder="0" background-color="#2c2c2c" width="600" height="760" allowfullscreen allow='autoplay; fullscreen' style="width:100%;height:760px;overflow:hidden;display:block;" class="_scorebatEmbeddedPlayer_"></iframe>
-            <script>
-                (function(d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0];
-                    if (d.getElementById(id)) return;
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = 'https://www.scorebat.com/embed/embed.js?v=arrv';
-                    fjs.parentNode.insertBefore(js, fjs);
-                }(document, 'script', 'scorebat-jssdk'));
-            </script>
-            <!-- End of ScoreBat Live Score Widget -->
+        <div class="left-container">
+            <div id="scoresTableContainer" class="center"></div>
+        </div>
+        <div class="right-container">
+            <div class="widget-container">
+                <!-- ScoreBat Live Score Widget -->
+                <iframe src="https://www.scorebat.com/embed/league/euro2024/?token=MTYyODQ0XzE3MTgyMzI5MzNfODM4Yjk1MTQzMmI1OGFiMWJkZGQyYjI0MTNiZDQ4YmQ1ZTQ1YWI4Ng==" frameborder="0" background-color="#2c2c2c" width="600" height="760" allowfullscreen allow='autoplay; fullscreen' style="width:100%;height:760px;overflow:hidden;display:block;" class="_scorebatEmbeddedPlayer_"></iframe>
+                <script>
+                    (function(d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0];
+                        if (d.getElementById(id)) return;
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = 'https://www.scorebat.com/embed/embed.js?v=arrv';
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'scorebat-jssdk'));
+                </script>
+                <!-- End of ScoreBat Live Score Widget -->
+            </div>
         </div>
     </div>
     <script>
