--- a/all_pred.html
+++ b/all_pred.html
@@ -100,7 +100,7 @@
             const pdf = new jsPDF();
 
             // Load the logo image
-            const logoResponse = await fetch('./logos/logo.png');
+            const logoResponse = await fetch('./logos/favicon.png');
             const logoBlob = await logoResponse.blob();
             const reader = new FileReader();
 
