--- a/rankings.html
+++ b/rankings.html
@@ -73,6 +73,7 @@
         }
 
         .widget-container {
+            margin-top: 50px;
             margin: 40px auto;
             width: 50%;
         }
