--- a/admin.html
+++ b/admin.html
@@ -153,12 +153,12 @@
 <body>
     <div class="menu-container">
         <ul class="menu">
-            <li><a href="./rankings.html">Rankings</a></li>
-            <li><a href="./comp_euros.html">Euro2024 Results</a></li>
-            <li><a href="./all_pred.html">Game by Game Points</a></li>
-            <li><a href="./pvp.html">Player vs Player</a></li>
-            <li><a href="./all_pred.html">Download All Predictions</a></li>
-            <li><a href="./predict.html">Prediction Form</a></li>
+            <li><a href="./ranks_widget.html">Rankings</a></li>
+            <li><a href="./comp2euros.html">Euro2024 Results</a></li>
+            <li><a href="./all_predictions.html">Game by Game Points</a></li>
+            <li><a href="./pvsp.html">Player vs Player</a></li>
+            <li><a href="./all_predictions.html">Download All Predictions</a></li>
+            <li><a href="./predictform.html">Prediction Form</a></li>
             <li><a href="./rules.html">Points System</a></li>
         </ul>
     </div>
@@ -700,7 +700,7 @@
         }
     </script>
 
-    <h2>GbyG Results</h2>
+    <h2>gamebygame Results</h2>
 
     <div class="dropdown-container">
         <label for="country1-1">Country 1:</label>
@@ -918,7 +918,7 @@
             const imgData = canvas.toDataURL('image/jpeg');
             const link = document.createElement('a');
             link.href = imgData;
-            link.download = 'GbyG.jpg';
+            link.download = 'gamebygame.jpg';
             link.click();
         }
     </script>
