--- a/comp2euros.html
+++ b/comp2euros.html
@@ -124,12 +124,12 @@
 <body>
     <div class="menu-container">
         <ul class="menu">
-            <li><a href="./rankings.html">Rankings</a></li>
-            <li><a href="./comp_euros.html">Euro2024 Results</a></li>
-            <li><a href="./gbyg.html">Game by Game Points</a></li>
-            <li><a href="./pvp.html">Player vs Player</a></li>
-            <li><a href="./all_pred.html">Download All Predictions</a></li>
-            <li><a href="./predict.html">Prediction Form</a></li>
+            <li><a href="./ranks_widget.html">Rankings</a></li>
+            <li><a href="./comp2euros.html">Euro2024 Results</a></li>
+            <li><a href="./gamebygame.html">Game by Game Points</a></li>
+            <li><a href="./pvsp.html">Player vs Player</a></li>
+            <li><a href="./all_predictions.html">Download All Predictions</a></li>
+            <li><a href="./predictform.html">Prediction Form</a></li>
             <li><a href="./rules.html">Points System</a></li>
         </ul>
     </div>
