--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="3; url=./predict.html">
+    <meta http-equiv="refresh" content="3; url=./predictform.html">
 </head>
 
 </html>
