--- a/all_predictions.html
+++ b/all_predictions.html
@@ -78,13 +78,14 @@
 <body>
     <div class="menu-container">
         <ul class="menu">
-            <li><a href="./ranks_widget.html">Rankings</a></li>
+            <li><a href="./ranks.html">Rankings</a></li>
             <li><a href="./comp2euros.html">Euro2024 Results</a></li>
             <li><a href="./gamebygame.html">Game by Game Points</a></li>
             <li><a href="./pvsp.html">Player vs Player</a></li>
             <li><a href="./all_predictions.html">Download All Predictions</a></li>
             <li><a href="./predictform.html">Prediction Form</a></li>
             <li><a href="./rules.html">Points System</a></li>
+            <li><a href="./widget.html">Widget</a></li>
         </ul>
     </div>
     <div class="logo-container">
