--- a/ranks.html
+++ b/ranks.html
@@ -95,13 +95,14 @@
 <body>
     <div class="menu-container">
         <ul class="menu">
-            <li><a href="./ranks_widget.html">Rankings</a></li>
+            <li><a href="./ranks.html">Rankings</a></li>
             <li><a href="./comp2euros.html">Euro2024 Results</a></li>
             <li><a href="./all_predictions.html">Game by Game Points</a></li>
             <li><a href="./pvsp.html">Player vs Player</a></li>
             <li><a href="./all_predictions.html">Download All Predictions</a></li>
             <li><a href="./predictform.html">Prediction Form</a></li>
             <li><a href="./rules.html">Points System</a></li>
+            <li><a href="./widget.html">Widget</a></li>
         </ul>
     </div>
     <div class="logo-container">
@@ -113,13 +114,6 @@
         </select>
     </div>
     <div id="scoresTableContainer" class="center"></div>
-    <div class="widget-container">
-        <iframe
-            src="https://www.scorebat.com/embed/league/euro2024/?token=MTYyODQ0XzE3MTgyMzMxMDFfM2Q1Y2YzZDk4M2YyZWU5MDA3NDUxZmQ0YjNlZDY0YjdiY2VjZWE1MA=="
-            frameborder="0" width="600" height="760" allowfullscreen allow='autoplay; fullscreen'
-            style="width:100%;height:760px;overflow:hidden;display:block;" class="_scorebatEmbeddedPlayer_"></iframe>
-        <script>(function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://www.scorebat.com/embed/embed.js?v=arrv'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'scorebat-jssdk'));</script>
-    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', (event) => {
