--- a/comp2euros.html
+++ b/comp2euros.html
@@ -12,8 +12,6 @@
             margin: 10px;
             background-color: #1e1e1e;
             color: #7c7a7a;
-            font-size: 12px;
-            /* Adjust the base font size */
         }
 
         .menu-container {
@@ -43,8 +41,6 @@
             border-collapse: collapse;
             border: none;
             margin-bottom: 10px;
-            font-size: 12px;
-            /* Adjust the table font size */
         }
 
         th,
@@ -64,8 +60,6 @@
             background-color: #6b6a6a;
             color: #fff;
             border: 1px solid #444444;
-            font-size: 12px;
-            /* Adjust the select font size */
         }
 
         .comparison-container {
@@ -140,7 +134,7 @@
     <h1>Euro2024 Results vs. Predictions</h1>
     <div class="comparison-container">
         <div class="table-container">
-            <h2>Actual Results</h2>
+            <h2>Euro2024 Results</h2>
             <div id="actualResults" class="aligned-tables"></div>
         </div>
         <div class="table-container">
