--- a/adminpage.html
+++ b/adminpage.html
@@ -466,7 +466,7 @@
                     }
 
                     participantCSV += "\n"
-                    participantCSV += "Knockout Stage\n"
+                    participantCSV += "KO Stage\n"
                     participantCSV += 'Round of 16,Team 1,Team 2,Winner,,Point\n'
 
                     for (let i = 51; i < 59; i++) {
