--- a/comp2euros.html
+++ b/comp2euros.html
@@ -227,7 +227,7 @@
         function displayTable(containerId, rows) {
             const boldText = [
                 'Group Stage', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
-                'Knockout Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
+                'KO Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
                 'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament', 'Top Players'
             ];
 
