--- a/predictform.html
+++ b/predictform.html
@@ -1572,7 +1572,7 @@
                 csvContent += "\n";
             }
 
-            csvContent += "Knockout Stage\n";
+            csvContent += "KO Stage\n";
             csvContent += "Round of 16\n";
             for (let i = 1; i <= 8; i++) {
                 csvContent += `${predictions.knockout['match' + i].date},${predictions.knockout['match' + i].team1},${predictions.knockout['match' + i].team2},${predictions.knockout['match' + i].winner}\n`;
