--- a/all_predictions.html
+++ b/all_predictions.html
@@ -143,7 +143,7 @@
 
                 const boldText = [
                     'Group Stage', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
-                    'Knockout Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
+                    'KO Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
                     'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament', 'Top Players'
                 ];
 
