--- a/pvsp.html
+++ b/pvsp.html
@@ -238,7 +238,7 @@
                                 const abbreviation = abbreviations[cellContent] ? abbreviations[cellContent] : cellContent;
                                 const boldText = [
                                     'Group Stage', 'Group A', 'Group B', 'Group C', 'Group D', 'Group E', 'Group F',
-                                    'Knockout Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
+                                    'KO Stage', 'Round of 16', 'Quarterfinals', 'Semifinals', 'Final',
                                     'Top Goalscorer', 'Best Goalkeeper', 'Player of Tournament', 'Top Players'
                                 ];
                                 const cellClass = boldText.includes(cellContent) ? 'bold-text' : '';
