--- a/predictform.html
+++ b/predictform.html
@@ -889,7 +889,7 @@
         </tr>
     </table>
     <hr>
-    <h2>Round of 16 Pairings</h2>
+    <h2>Round of 16</h2>
     <table id="round-16" class="knockout-stage">
         <tr>
             <th>Date</th>
@@ -963,7 +963,7 @@
         </tr>
     </table>
     <hr>
-    <h2>Quarterfinal Pairings</h2>
+    <h2>Quarterfinal</h2>
     <table id="quarter-finals" class="knockout-stage">
         <tr>
             <th>Date</th>
@@ -1005,7 +1005,7 @@
         </tr>
     </table>
     <hr>
-    <h2>Semifinal Pairings</h2>
+    <h2>Semifinal</h2>
     <table id="semi-finals" class="knockout-stage">
         <tr>
             <th>Date</th>
@@ -1253,7 +1253,7 @@
                     }
                 }
 
-                // Determine round of 16 pairings
+                // Determine round of 16
                 determineRoundOf16();
             }
         }
