--- a/ranks.html
+++ b/ranks.html
@@ -172,9 +172,9 @@
 
                 scoresData.sort((a, b) => b.score - a.score);
 
-                const selectedDateIndex = Array.from(document.getElementById('dateSelector').options).findIndex(option => option.value === selectedDate);
-                if (selectedDateIndex > 1) {
-                    const previousDate = document.getElementById('dateSelector').options[selectedDateIndex - 1].value;
+                if (selectedDate === 'Overall') {
+                    const previousDateIndex = Array.from(document.getElementById('dateSelector').options).length - 2;
+                    const previousDate = document.getElementById('dateSelector').options[previousDateIndex].value;
 
                     for (const participant of participants.participants) {
                         const csvResponse = await fetch(participant.scores);
@@ -182,24 +182,15 @@
                         const participantRows = csvData.split('\n').map(row => row.split(','));
 
                         let totalScore = 0;
-                        let previousDateScore = 0;
 
                         for (const row of participantRows) {
                             if (row.length === 6) {
                                 const score = parseInt(row[5]) || 0;
                                 totalScore += score;
-
-                                if (row[0] === previousDate) {
-                                    previousDateScore += score;
-                                }
                             }
                         }
 
-                        if (selectedDate === 'Overall') {
-                            previousScoresData.push({ name: participant.name, score: totalScore });
-                        } else {
-                            previousScoresData.push({ name: participant.name, score: previousDateScore });
-                        }
+                        previousScoresData.push({ name: participant.name, score: totalScore });
                     }
 
                     previousScoresData.sort((a, b) => b.score - a.score);
@@ -207,15 +198,24 @@
 
                 let tableHTML = `<h2>${description}</h2>`;
                 tableHTML += '<table>';
-                tableHTML += '<tr><th>Rank</th><th>Participant</th><th>Score</th><th>Rank Change</th></tr>';
+                tableHTML += '<tr><th>Rank</th><th>Participant</th><th>Score</th>';
+
+                if (selectedDate === 'Overall') {
+                    tableHTML += '<th>Rank Change</th>';
+                }
+
+                tableHTML += '</tr>';
 
                 scoresData.forEach((data, index) => {
-                    let rankChange = '-';
-                    if (previousScoresData.length > 0) {
+                    tableHTML += `<tr><td>${index + 1}</td><td>${data.name}</td><td>${data.score}</td>`;
+
+                    if (selectedDate === 'Overall') {
                         const previousRank = previousScoresData.findIndex(d => d.name === data.name) + 1;
-                        rankChange = previousRank ? (previousRank - (index + 1)) : '-';
+                        const rankChange = previousRank ? (previousRank - (index + 1)) : '-';
+                        tableHTML += `<td>${rankChange}</td>`;
                     }
-                    tableHTML += `<tr><td>${index + 1}</td><td>${data.name}</td><td>${data.score}</td><td>${rankChange}</td></tr>`;
+
+                    tableHTML += '</tr>';
                 });
 
                 tableHTML += '</table>';
