--- a/ranks.html
+++ b/ranks.html
@@ -142,65 +142,36 @@
                 let previousScoresData = [];
                 let description = '';
 
-                // Fetch today's scores
+                // Calculate scores up to the previous day
                 for (const participant of participants.participants) {
                     const csvResponse = await fetch(participant.scores);
                     const csvData = await csvResponse.text();
                     const participantRows = csvData.split('\n').map(row => row.split(','));
 
                     let totalScore = 0;
-                    let dateScore = 0;
+                    let previousTotalScore = 0;
 
                     for (const row of participantRows) {
                         if (row.length === 6) {
                             const score = parseInt(row[5]) || 0;
                             totalScore += score;
+                            const rowDate = new Date(row[0]);
+                            const selectedDateObj = new Date(selectedDate);
 
-                            if (row[0] === selectedDate) {
-                                dateScore += score;
+                            if (rowDate < selectedDateObj) {
+                                previousTotalScore += score;
                             }
                         }
                     }
 
                     if (selectedDate === 'Overall') {
                         scoresData.push({ name: participant.name, score: totalScore });
-                        description = 'Overall Ranking';
-                    } else {
-                        scoresData.push({ name: participant.name, score: dateScore });
-                        description = `Ranking for Games on ${selectedDate}`;
+                        previousScoresData.push({ name: participant.name, score: previousTotalScore });
                     }
                 }
 
                 scoresData.sort((a, b) => b.score - a.score);
-
-                if (selectedDate === 'Overall') {
-                    // Fetch previous day's scores
-                    const dateSelectorOptions = document.getElementById('dateSelector').options;
-                    const selectedDateIndex = Array.from(dateSelectorOptions).findIndex(option => option.value === selectedDate);
-
-                    if (selectedDateIndex > 1) {
-                        const previousDate = dateSelectorOptions[selectedDateIndex - 1].value;
-
-                        for (const participant of participants.participants) {
-                            const csvResponse = await fetch(participant.scores);
-                            const csvData = await csvResponse.text();
-                            const participantRows = csvData.split('\n').map(row => row.split(','));
-
-                            let totalScore = 0;
-
-                            for (const row of participantRows) {
-                                if (row.length === 6) {
-                                    const score = parseInt(row[5]) || 0;
-                                    totalScore += score;
-                                }
-                            }
-
-                            previousScoresData.push({ name: participant.name, score: totalScore });
-                        }
-
-                        previousScoresData.sort((a, b) => b.score - a.score);
-                    }
-                }
+                previousScoresData.sort((a, b) => b.score - a.score);
 
                 let tableHTML = `<h2>${description}</h2>`;
                 tableHTML += '<table>';
@@ -215,7 +186,7 @@
                 scoresData.forEach((data, index) => {
                     tableHTML += `<tr><td>${index + 1}</td><td>${data.name}</td><td>${data.score}</td>`;
 
-                    if (selectedDate === 'Overall' && previousScoresData.length > 0) {
+                    if (selectedDate === 'Overall') {
                         const previousRank = previousScoresData.findIndex(d => d.name === data.name) + 1;
                         const rankChange = previousRank ? (previousRank - (index + 1)) : '-';
                         tableHTML += `<td>${rankChange >= 0 ? '+' : ''}${rankChange}</td>`;
