--- a/ranks.html
+++ b/ranks.html
@@ -139,60 +139,44 @@
 
                 const selectedDate = document.getElementById('dateSelector').value;
                 let scoresData = [];
-                let previousScoresData = [];
                 let description = '';
 
-                // Calculate scores up to the previous day
                 for (const participant of participants.participants) {
                     const csvResponse = await fetch(participant.scores);
                     const csvData = await csvResponse.text();
                     const participantRows = csvData.split('\n').map(row => row.split(','));
 
                     let totalScore = 0;
-                    let previousTotalScore = 0;
+                    let dateScore = 0;
 
                     for (const row of participantRows) {
                         if (row.length === 6) {
                             const score = parseInt(row[5]) || 0;
                             totalScore += score;
-                            const rowDate = new Date(row[0]);
-                            const selectedDateObj = new Date(selectedDate);
 
-                            if (rowDate < selectedDateObj) {
-                                previousTotalScore += score;
+                            if (row[0] === selectedDate) {
+                                dateScore += score;
                             }
                         }
                     }
 
                     if (selectedDate === 'Overall') {
                         scoresData.push({ name: participant.name, score: totalScore });
-                        previousScoresData.push({ name: participant.name, score: previousTotalScore });
+                        description = 'Overall Ranking';
+                    } else {
+                        scoresData.push({ name: participant.name, score: dateScore });
+                        description = `Ranking for Games on ${selectedDate}`;
                     }
                 }
 
                 scoresData.sort((a, b) => b.score - a.score);
-                previousScoresData.sort((a, b) => b.score - a.score);
 
                 let tableHTML = `<h2>${description}</h2>`;
                 tableHTML += '<table>';
-                tableHTML += '<tr><th>Rank</th><th>Participant</th><th>Score</th>';
-
-                if (selectedDate === 'Overall') {
-                    tableHTML += '<th>Rank Change</th>';
-                }
-
-                tableHTML += '</tr>';
+                tableHTML += '<tr><th>Rank</th><th>Participant</th><th>Score</th></tr>';
 
                 scoresData.forEach((data, index) => {
-                    tableHTML += `<tr><td>${index + 1}</td><td>${data.name}</td><td>${data.score}</td>`;
-
-                    if (selectedDate === 'Overall') {
-                        const previousRank = previousScoresData.findIndex(d => d.name === data.name) + 1;
-                        const rankChange = previousRank ? (previousRank - (index + 1)) : '-';
-                        tableHTML += `<td>${rankChange >= 0 ? '+' : ''}${rankChange}</td>`;
-                    }
-
-                    tableHTML += '</tr>';
+                    tableHTML += `<tr><td>${index + 1}</td><td>${data.name}</td><td>${data.score}</td></tr>`;
                 });
 
                 tableHTML += '</table>';
